<resources>
    <string name="app_name">Diana Store</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="loading">Loading…</string>
    <string name="default_notification_channel_id" translatable="false">tutorialtokoonline</string>
    <string name="pilih_profinsi">Pilih Provinsi</string>
    <string name="kode_pos">Kode Pos*</string>
    <string name="title">Title</string>
    <string name="rp0">Rp0</string>
    <string name="catatan_untuk_teknisi_opsional">Catatan untuk teknisi (Opsional)</string>
    <string name="catatan_pengiriman">Catatan Pengiriman</string>
    <string name="kode_voucher">Kode Voucher</string>
    <string name="kode_voucher_jika_ada">Kode Voucher jika ada</string>
    <string name="diskon_voucher">Diskon Voucher</string>
    <string name="status">Status</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="rp_10_000">Rp.10.000</string>
    <string name="_1_item">1 item</string>
    <string name="detail_pengiriman">Detail Pengiriman</string>
    <string name="kurir_pengiriman">Kurir Pengiriman</string>
    <string name="jne_expres">JNE Expres</string>
    <string name="alamat_pengirirman">Alamat Pengirirman</string>
    <string name="user_n0818273687_nlamongan_jawatimur">User
        0818273687
        Lamongan jawatimur</string>
    <string name="informasi_pembayaran">Informasi Pembayaran</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="biaya_kirim">Biaya kirim</string>
    <string name="total_belanja">Total Belanja</string>
    <string name="kode_unik">Kode Unik</string>
    <string name="total">Total</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="hapus">Hapus</string>
    <string name="transfer_manual">Transfer Manual</string>
    <string name="_0931283129">0931283129</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="salin">Salin</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="penting_transfer">Penting! Transfer dengan jumlah yang tepat hingga 3 digit terakhir.</string>

    <string name="kode_unik_digunakan">(Kode unik digunakan untuk memudahkan sistem kami dalam melakukan pengecekan pembayaran)</string>
    <string name="lakukan_pembayaran_melalui">Lakukan pembayaran melalui ATM / mobile banking / internet banking / SMS banking / kantor bank terdekat</string>
    <string name="pembayaran2">Ini Nomor Rekening tujuan sesuai yang ada di halaman Pembayaran</string>
    <string name="pembayaran3">Masukan nominal pembayaran sesuai jumlah tagihanmu, termasuk 3 digit terakhir</string>
    <string name="pembayaran4">Pembayaran akan diverifikasi oleh kami. Waktu Verifikasi paling lambat 1x24 jam untuk sesama bank, dan 2x24 jam di hari kerja jika antar bank yang berbeda</string>
    <string name="_4">4. </string>
    <string name="_3">3. </string>
    <string name="_2">2. </string>
    <string name="_1">1. </string>
    <string name="norek">8365259743</string>
    <string name="user">Davit</string>
    <string name="inv_2020">INV/2020</string>
    <string name="catatan">Catatan</string>
    <string name="nyalakan_location">Nyalakan location</string>
    <string name="undang_teman">Undang Teman</string>
    <string name="keluar">Keluar</string>
    <string name="bantuan_dan_dukungan">Bantuan dan Dukungan</string>
    <string name="pilih_metode_pengiriman">Pilih Metode Pengiriman</string>
    <string name="pilih_jenis_gigi">Pilih Jenis Gigi</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="dokter_gigi">Dokter Gigi</string>
    <string name="email">Email</string>
    <string name="atur_pajak">Atur Pajak</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="cari">Cari</string>
    <string name="selesai">Selesai</string>
    <string name="management">Management</string>
    <string name="nama">Nama</string>
    <string name="ubah">ubah</string>
    <string name="_082341810186">082341810186</string>
    <string name="strip">-</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="ppn_10">PPN 10%</string>
    <string name="diskon">Diskon</string>
    <string name="data_slider_kosong">Data slider kosong</string>
    <string name="data_berita_kosong">Data berita kosong</string>
    <string name="isi_berita">Isi Berita</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="semua">Semua</string>
    <string name="apa_yang_baru">Apa yang baru?</string>
    <string name="produk_favorite">Produk Favorite</string>
    <string name="rekomendasi_produk_untukmu">Rekomendasi produk untukmu</string>
    <string name="tambahkan_alamat_anda_sekarang_untuk_nlanjut_berbelanja_di_toko_kami">Tambahkan alamat anda sekarang untuk \nlanjut berbelanja di toko kami</string>
    <string name="belum_ada_alamat">Belum ada alamat</string>
    <string name="tambah_alamat">Tambah Alamat</string>
</resources>
